--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<meta name="theme-color" content="#ffffff">
 </head>
 <body>
-<!--     <header class="header">
+     <header class="header">
         <div class="header__container">
             <div class="header__logo-container">
                 <div class="header__logo">
@@ -79,7 +79,7 @@
         </div>
         <p class="form-phone">или перезвоните нам по телефону:<img class="phone-icon" 
             src="./build/images/phone-icon.png" alt=""><a class="number" href="tel:+7 (8182) 20-80-10">+7 (8182) 20-80-10</a></p>
-    </section> -->
+    </section>
     <section class="camps">
         <h2 class="camps-heading">Выберите путёвку в лучшие лагеря страны</h2>
         <p class="camps-subheading">Каталог путёвок с ценами:</p>
@@ -114,7 +114,7 @@
             </div>
         </div>
     </section>
-<!--     <section class="proposal">
+    <section class="proposal">
         <h2 class="proposal-heading">Специальное предложение - успейте забронировать!</h2>
         <p class="proposal-subheading">Путёвка в детский оздоровительный лагерь "Лазуровый берег"</p>
         <p class="term">на 18 дней всего<span class="price">за 25800 рублей!</span></p>
@@ -467,7 +467,7 @@
                 <p class="e-mail">7knt@mail.ru</p>
             </div>
         </div>
-    </footer> -->
+    </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="build/js/min.js"></script>
 </body>
